# HMI-Rotty

./: .gitignore  AGENTS.md  README.md  index.html  latest.json  package-lock.json  package.json
codigo_arduino/Miguel_Brazo/: Axis.h  Config.h  Gripper.cpp  Gripper.h  Hardware.cpp  Hardware.h  Homing.cpp  Homing.h  Miguel_Brazo.ino  Motion.cpp  Motion.h  Protocol.cpp  Protocol.h  README_PROTOCOL.md  SerialInput.cpp  SerialInput.h
public/: robot.gltf
scripts/: make-latest-json.ps1
src/: main.tsx  styles.css  three-shim.d.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
